// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common - TablePageLayout - util - TableRendererFooter expect to match snapshot on desktop 1`] = `
<div>
  <div
    class="MuiBox-root css-11ezxrp"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-1vbz8i-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-auto css-kqwn4m-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-19z5v8g"
          data-testid="total-undefined-count"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`common - TablePageLayout - util - TableRendererFooter expect to match snapshot on mobile 1`] = `
<div>
  <div
    class="MuiBox-root css-11ezxrp"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column-reverse MuiGrid-grid-xs-12 css-ykx38k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-auto css-kqwn4m-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-19z5v8g"
          data-testid="total-undefined-count"
        />
      </div>
    </div>
  </div>
</div>
`;
